--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -28,7 +28,8 @@ tauri-plugin-updater = { git = "https://github.com/tauri-apps/plugins-workspace"
 tauri-plugin-clipboard-manager = "2.1.0-beta.6"
 tauri-plugin-notification = "2.0.0-rc.1"
 tauri-plugin-upload = "2.0.0"
-tauri-plugin-dialog = "2.0.0"
+tauri-plugin-dialog = "2"
+tauri-plugin-fs = "2"
 
 [features]
 # by default Tauri runs in production mode
