--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
     "@types/node": "^24.0.8",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "exceljs": "^4.4.0",
     "jotai": "^2.14.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-virtualized": "^9.22.6",
     "react-window": "^2.1.1",
     "typescript": "^5.8.3",
+    "xlsx": "^0.18.5",
     "xlsx-js-style": "^1.2.0"
   },
   "devDependencies": {
