--- a/package.json
+++ b/package.json
@@ -19,20 +19,28 @@
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "7.2.0",
     "@mui/x-data-grid": "^8.11.3",
+    "@mui/x-date-pickers": "^8.12.0",
     "@tanstack/react-router": "^1.123.2",
     "@tanstack/router-devtools": "^1.123.2",
+    "@tauri-apps/api": "^2.8.0",
     "@tauri-apps/plugin-dialog": "~2.4.0",
     "@tauri-apps/plugin-fs": "~2",
+    "@tauri-apps/plugin-notification": "~2.3.1",
     "@types/node": "^24.0.8",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.18",
     "exceljs": "^4.4.0",
     "jotai": "^2.14.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-virtualized": "^9.22.6",
+    "react-virtualized-auto-sizer": "^1.0.7",
     "react-window": "^2.1.1",
+    "recharts": "^2.12.7",
     "typescript": "^5.8.3",
+    "uuid": "^13.0.0",
     "xlsx": "^0.18.5",
     "xlsx-js-style": "^1.2.0"
   },
