--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@fontsource-variable/plus-jakarta-sans": "^5.2.6",
+    "@hello-pangea/dnd": "^16.5.0",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "7.2.0",
     "@mui/x-data-grid": "^8.11.3",
     "@mui/x-date-pickers": "^8.12.0",
-    "@hello-pangea/dnd": "^16.5.0",
+    "@mui/x-date-pickers-pro": "^8.14.0",
     "@tanstack/react-router": "^1.123.2",
     "@tanstack/router-devtools": "^1.123.2",
     "@tauri-apps/api": "^2.8.0",
